--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -23,31 +22,53 @@
 
 body {
   height: 100dvh;
-  background: var(--bg-dark);
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
   color: var(--text);
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: radial-gradient(circle at center, #1a0012 0%, #0f0f14 70%);
+  animation: breathe 6s infinite ease-in-out;
   transition: background 1.5s ease;
+}
+
+@keyframes breathe {
+  0% { background-size: 100% 100%; }
+  50% { background-size: 110% 110%; }
+  100% { background-size: 100% 100%; }
+}
+
+.glow {
+  position: fixed;
+  inset: 0;
+  background: radial-gradient(circle at center, rgba(255,46,99,0.4), transparent 70%);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
 }
 
 .container {
   text-align: center;
-  position: relative;
   z-index: 2;
+  transform-style: preserve-3d;
+  transition: transform 0.2s ease-out;
 }
 
 .heart {
-  font-size: 60px;
-  animation: pulse 2s infinite ease-in-out;
-  transition: transform 0.2s ease;
+  font-size: clamp(140px, 30vw, 240px);
+  line-height: 1;
+  animation: pulse 2.2s infinite cubic-bezier(.4,0,.2,1);
+  filter: drop-shadow(0 0 25px rgba(255, 46, 99, 0.7))
+          drop-shadow(0 0 50px rgba(255, 46, 99, 0.4));
+  transition: transform 0.15s ease;
 }
 
 @keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.15); }
+  0%   { transform: scale(1); }
+  25%  { transform: scale(1.08); }
+  40%  { transform: scale(0.98); }
+  60%  { transform: scale(1.15); }
   100% { transform: scale(1); }
 }
 
@@ -56,8 +77,10 @@ body {
 }
 
 @keyframes strongPulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.4); }
+  0%   { transform: scale(1); }
+  30%  { transform: scale(1.25); }
+  50%  { transform: scale(0.95); }
+  70%  { transform: scale(1.35); }
   100% { transform: scale(1); }
 }
 
@@ -70,13 +93,9 @@ body {
 
 .message {
   margin-top: 40px;
-  font-size: 22px;
+  font-size: 24px;
   opacity: 0;
-  transition: opacity 1.2s ease;
-}
-
-.show {
-  opacity: 1;
+  transition: opacity 1.5s ease;
 }
 
 .final {
@@ -86,8 +105,8 @@ body {
   transition: opacity 2s ease;
 }
 
-.gradient-bg {
-  background: radial-gradient(circle at center, #2a001a 0%, #0f0f14 70%);
+.show {
+  opacity: 1;
 }
 
 canvas {
@@ -101,9 +120,10 @@ canvas {
 
 <body>
 
+<div class="glow" id="glow"></div>
 <canvas id="canvas"></canvas>
 
-<div class="container">
+<div class="container" id="container">
   <div class="heart" id="heart">❤️</div>
   <div class="subtitle">Подержи...</div>
   <div class="message" id="message">С каждым ударом — ты.</div>
@@ -114,26 +134,39 @@ canvas {
 const heart = document.getElementById("heart");
 const message = document.getElementById("message");
 const final = document.getElementById("final");
-const body = document.body;
+const glow = document.getElementById("glow");
+const container = document.getElementById("container");
 
 let holdTimer;
-let holdStart;
+let audioStarted = false;
+
+const audio = new Audio("https://assets.mixkit.co/sfx/preview/mixkit-heartbeat-590.mp3");
+audio.loop = true;
+audio.volume = 0.4;
+
+function flashGlow() {
+  glow.style.opacity = "1";
+  setTimeout(() => glow.style.opacity = "0", 250);
+}
+
+setInterval(flashGlow, 2000);
 
 function startHold() {
   heart.classList.add("holding");
-  holdStart = Date.now();
+
+  if (!audioStarted) {
+    audio.play();
+    audioStarted = true;
+  }
 
   if (navigator.vibrate) navigator.vibrate(50);
 
   holdTimer = setTimeout(() => {
-    body.classList.add("gradient-bg");
     message.classList.add("show");
-
     setTimeout(() => {
       final.classList.add("show");
       launchHearts();
     }, 2000);
-
   }, 3000);
 }
 
@@ -155,11 +188,11 @@ function launchHearts() {
 
   const hearts = [];
 
-  for (let i = 0; i < 50; i++) {
+  for (let i = 0; i < 60; i++) {
     hearts.push({
       x: Math.random() * canvas.width,
       y: canvas.height,
-      size: Math.random() * 20 + 10,
+      size: Math.random() * 24 + 12,
       speed: Math.random() * 3 + 1,
       opacity: Math.random()
     });
@@ -177,6 +210,16 @@ function launchHearts() {
   }
 
   draw();
+}
+
+/* Parallax tilt for iPhone */
+if (window.DeviceOrientationEvent) {
+  window.addEventListener("deviceorientation", (event) => {
+    let tiltX = event.gamma / 20;
+    let tiltY = event.beta / 40;
+    container.style.transform =
+      `rotateY(${tiltX}deg) rotateX(${tiltY}deg)`;
+  });
 }
 </script>
 
