--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ body {
   line-height: 0.8;
   animation: heartbeat 1.6s infinite;
   filter: drop-shadow(0 0 40px rgba(255,46,99,0.7));
+  transition: transform 0.6s ease, opacity 0.6s ease;
 }
 
 @keyframes heartbeat {
@@ -51,6 +52,12 @@ body {
   60%  { transform: scale(1.12); }
   80%  { transform: scale(0.98); }
   100% { transform: scale(1); }
+}
+
+.heart.shrink {
+  animation: none;
+  transform: scale(0);
+  opacity: 0;
 }
 
 .subtitle {
@@ -99,7 +106,7 @@ let tilt = 0;
 
 function startHold() {
   holdTimer = setTimeout(() => {
-    explodeHeart();
+    shrinkAndExplode();
     typeText("С каждым ударом — ты.");
   }, 3000);
 }
@@ -113,6 +120,29 @@ heart.addEventListener("touchend", endHold);
 heart.addEventListener("mousedown", startHold);
 heart.addEventListener("mouseup", endHold);
 
+function shrinkAndExplode() {
+  heart.classList.add("shrink");
+
+  setTimeout(() => {
+    heart.style.display = "none";
+    explodeParticles();
+  }, 600);
+}
+
+function explodeParticles() {
+  for (let i = 0; i < 200; i++) {
+    particles.push({
+      x: canvas.width / 2,
+      y: canvas.height / 2,
+      vx: (Math.random() - 0.5) * 12,
+      vy: (Math.random() - 0.5) * 12,
+      size: Math.random() * 18 + 8,
+      rotation: Math.random() * Math.PI,
+      spin: (Math.random() - 0.5) * 0.3
+    });
+  }
+}
+
 function typeText(text) {
   let i = 0;
   const interval = setInterval(() => {
@@ -122,22 +152,6 @@ function typeText(text) {
   }, 60);
 }
 
-function explodeHeart() {
-  heart.style.display = "none";
-
-  for (let i = 0; i < 180; i++) {
-    particles.push({
-      x: canvas.width / 2,
-      y: canvas.height / 2,
-      vx: (Math.random() - 0.5) * 6,
-      vy: (Math.random() - 0.5) * 6,
-      size: Math.random() * 18 + 10,
-      rotation: Math.random() * Math.PI,
-      spin: (Math.random() - 0.5) * 0.2
-    });
-  }
-}
-
 function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -145,7 +159,6 @@ function draw() {
 
     p.vx += (Math.random() - 0.5) * 0.2;
     p.vy += (Math.random() - 0.5) * 0.2;
-
     p.vx += tilt * 0.05;
 
     p.x += p.vx;
@@ -169,7 +182,6 @@ function draw() {
 
 draw();
 
-/* Лёгкое влияние наклона */
 if (window.DeviceOrientationEvent) {
   window.addEventListener("deviceorientation", e => {
     tilt = e.gamma / 40;
