--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>For You ❤️</title>
+<title>Love Reveal ❤️</title>
 
 <style>
 :root {
   --bg: #0f0f14;
-  --accent: #ff2e63;
   --text: #ffffff;
 }
 
@@ -18,7 +17,6 @@
   box-sizing: border-box;
   -webkit-user-select: none;
   user-select: none;
-  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -26,50 +24,11 @@ body {
   overflow: hidden;
   background: radial-gradient(circle at center, #1a0012 0%, #0f0f14 70%);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   color: var(--text);
-}
-
-.container {
-  text-align: center;
-  z-index: 2;
-}
-
-.heart {
-  font-size: 90vw;
-  line-height: 0.8;
-  animation: heartbeat 1.6s infinite;
-  filter: drop-shadow(0 0 40px rgba(255,46,99,0.7));
-  transition: transform 0.6s ease, opacity 0.6s ease;
-}
-
-@keyframes heartbeat {
-  0%   { transform: scale(1); }
-  20%  { transform: scale(1.08); }
-  40%  { transform: scale(0.95); }
-  60%  { transform: scale(1.12); }
-  80%  { transform: scale(0.98); }
-  100% { transform: scale(1); }
-}
-
-.heart.shrink {
-  animation: none;
-  transform: scale(0);
-  opacity: 0;
-}
-
-.subtitle {
-  margin-top: 20px;
-  font-size: 18px;
-  opacity: 0.6;
-}
-
-.message {
-  margin-top: 30px;
-  font-size: 24px;
-  min-height: 30px;
 }
 
 canvas {
@@ -77,97 +36,114 @@ canvas {
   top: 0;
   left: 0;
   pointer-events: none;
+  z-index: 1;
+}
+
+.message {
+  font-size: 28px;
+  margin-bottom: 20px;
+  min-height: 40px;
+  z-index: 2;
+}
+
+.final {
+  font-size: 80px;
+  font-weight: bold;
+  color: #ff2e63;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 2;
+  transition: opacity 1.5s ease, transform 2s ease;
 }
 </style>
 </head>
 
 <body>
 
+<div class="message" id="message"></div>
+<div class="final" id="final">❤️ Only you ❤️</div>
 <canvas id="canvas"></canvas>
 
-<div class="container">
-  <div class="heart" id="heart">❤️</div>
-  <div class="subtitle">Подержи...</div>
-  <div class="message" id="message"></div>
-</div>
-
 <script>
-const heart = document.getElementById("heart");
-const message = document.getElementById("message");
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
-
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-let holdTimer;
+const message = document.getElementById("message");
+const final = document.getElementById("final");
+
 let particles = [];
 let tilt = 0;
 
-function startHold() {
-  holdTimer = setTimeout(() => {
-    shrinkAndExplode();
-    typeText("С каждым ударом — ты.");
-  }, 3000);
+// Инициализация маленьких сердец
+for (let i = 0; i < 120; i++) {
+  particles.push({
+    x: Math.random() * canvas.width,
+    y: Math.random() * canvas.height,
+    vx: (Math.random() - 0.5) * 2,
+    vy: (Math.random() - 0.5) * 2,
+    size: Math.random() * 20 + 8,
+    rotation: Math.random() * Math.PI,
+    spin: (Math.random() - 0.5) * 0.05
+  });
 }
 
-function endHold() {
-  clearTimeout(holdTimer);
-}
+// Печатающийся текст
+const text = "Айлавю май дарлинг😘";
+let index = 0;
 
-heart.addEventListener("touchstart", startHold);
-heart.addEventListener("touchend", endHold);
-heart.addEventListener("mousedown", startHold);
-heart.addEventListener("mouseup", endHold);
-
-function shrinkAndExplode() {
-  heart.classList.add("shrink");
-
-  setTimeout(() => {
-    heart.style.display = "none";
-    explodeParticles();
-  }, 600);
-}
-
-function explodeParticles() {
-  for (let i = 0; i < 200; i++) {
-    particles.push({
-      x: canvas.width / 2,
-      y: canvas.height / 2,
-      vx: (Math.random() - 0.5) * 12,
-      vy: (Math.random() - 0.5) * 12,
-      size: Math.random() * 18 + 8,
-      rotation: Math.random() * Math.PI,
-      spin: (Math.random() - 0.5) * 0.3
-    });
+function typeText() {
+  if (index < text.length) {
+    message.textContent += text[index];
+    index++;
+    setTimeout(typeText, 120);
+  } else {
+    // После текста собираем сердце
+    setTimeout(formBigHeart, 800);
   }
 }
 
-function typeText(text) {
-  let i = 0;
-  const interval = setInterval(() => {
-    message.textContent += text[i];
-    i++;
-    if (i >= text.length) clearInterval(interval);
-  }, 60);
+// Собираем маленькие сердечки в центр
+function formBigHeart() {
+  const centerX = canvas.width / 2;
+  const centerY = canvas.height / 2;
+
+  particles.forEach(p => {
+    p.targetX = centerX + (Math.random() - 0.5) * 80;
+    p.targetY = centerY + (Math.random() - 0.5) * 80;
+  });
+
+  final.style.opacity = "1";
+  final.style.transform = "translate(-50%, -50%) scale(1)";
 }
 
+// Анимация частиц
 function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
   particles.forEach(p => {
 
-    p.vx += (Math.random() - 0.5) * 0.2;
-    p.vy += (Math.random() - 0.5) * 0.2;
-    p.vx += tilt * 0.05;
+    if (p.targetX !== undefined) {
+      // Линейная интерполяция к центру
+      p.x += (p.targetX - p.x) * 0.06;
+      p.y += (p.targetY - p.y) * 0.06;
+    } else {
+      // хаотичное движение
+      p.vx += (Math.random() - 0.5) * 0.1;
+      p.vy += (Math.random() - 0.5) * 0.1;
+      p.vx += tilt * 0.05;
+      p.x += p.vx;
+      p.y += p.vy;
 
-    p.x += p.vx;
-    p.y += p.vy;
+      if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
+      if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
+    }
 
     p.rotation += p.spin;
-
-    if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
-    if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
 
     ctx.save();
     ctx.translate(p.x, p.y);
@@ -181,7 +157,9 @@ function draw() {
 }
 
 draw();
+typeText();
 
+// Лёгкое влияние наклона
 if (window.DeviceOrientationEvent) {
   window.addEventListener("deviceorientation", e => {
     tilt = e.gamma / 40;
