--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-user-select: none;
   user-select: none;
+  -webkit-user-select: none;
 }
 
 body {
@@ -44,10 +44,11 @@ canvas {
   margin-bottom: 20px;
   min-height: 40px;
   z-index: 2;
+  text-align: center;
 }
 
-.final {
-  font-size: 80px;
+.finalText {
+  font-size: 60px;
   font-weight: bold;
   color: #ff2e63;
   position: absolute;
@@ -56,7 +57,8 @@ canvas {
   transform: translate(-50%, -50%);
   opacity: 0;
   z-index: 2;
-  transition: opacity 1.5s ease, transform 2s ease;
+  pointer-events: none;
+  transition: opacity 1.5s ease;
 }
 </style>
 </head>
@@ -64,7 +66,7 @@ canvas {
 <body>
 
 <div class="message" id="message"></div>
-<div class="final" id="final">❤️ Only you ❤️</div>
+<div class="finalText" id="finalText">онли ю</div>
 <canvas id="canvas"></canvas>
 
 <script>
@@ -74,21 +76,26 @@ canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
 const message = document.getElementById("message");
-const final = document.getElementById("final");
+const finalText = document.getElementById("finalText");
 
 let particles = [];
 let tilt = 0;
+const particleCount = 250;
+const centerX = canvas.width / 2;
+const centerY = canvas.height / 2;
 
-// Инициализация маленьких сердец
-for (let i = 0; i < 120; i++) {
+// Инициализация хаотичных маленьких сердец
+for (let i = 0; i < particleCount; i++) {
   particles.push({
     x: Math.random() * canvas.width,
     y: Math.random() * canvas.height,
     vx: (Math.random() - 0.5) * 2,
     vy: (Math.random() - 0.5) * 2,
-    size: Math.random() * 20 + 8,
+    size: Math.random() * 18 + 8,
     rotation: Math.random() * Math.PI,
-    spin: (Math.random() - 0.5) * 0.05
+    spin: (Math.random() - 0.5) * 0.05,
+    targetX: null,
+    targetY: null
   });
 }
 
@@ -100,25 +107,37 @@ function typeText() {
   if (index < text.length) {
     message.textContent += text[index];
     index++;
-    setTimeout(typeText, 120);
+    setTimeout(typeText, 100);
   } else {
-    // После текста собираем сердце
-    setTimeout(formBigHeart, 800);
+    setTimeout(formHeartShape, 800);
   }
 }
 
-// Собираем маленькие сердечки в центр
-function formBigHeart() {
-  const centerX = canvas.width / 2;
-  const centerY = canvas.height / 2;
+// Создание координат для большого сердца
+function generateHeartShapePoints(count) {
+  const points = [];
+  const scale = Math.min(canvas.width, canvas.height) / 25;
+  for (let i = 0; i < count; i++) {
+    const t = Math.random() * Math.PI * 2;
+    const x = 16 * Math.pow(Math.sin(t), 3);
+    const y = -(13 * Math.cos(t) - 5 * Math.cos(2*t) - 2*Math.cos(3*t) - Math.cos(4*t));
+    points.push({
+      x: centerX + x * scale + (Math.random()-0.5)*5,
+      y: centerY + y * scale + (Math.random()-0.5)*5
+    });
+  }
+  return points;
+}
 
-  particles.forEach(p => {
-    p.targetX = centerX + (Math.random() - 0.5) * 80;
-    p.targetY = centerY + (Math.random() - 0.5) * 80;
+// Присвоение частицам целей
+function formHeartShape() {
+  const targets = generateHeartShapePoints(particleCount);
+  particles.forEach((p, i) => {
+    p.targetX = targets[i].x;
+    p.targetY = targets[i].y;
   });
 
-  final.style.opacity = "1";
-  final.style.transform = "translate(-50%, -50%) scale(1)";
+  finalText.style.opacity = "1";
 }
 
 // Анимация частиц
@@ -126,11 +145,9 @@ function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
   particles.forEach(p => {
-
-    if (p.targetX !== undefined) {
-      // Линейная интерполяция к центру
-      p.x += (p.targetX - p.x) * 0.06;
-      p.y += (p.targetY - p.y) * 0.06;
+    if (p.targetX !== null) {
+      p.x += (p.targetX - p.x) * 0.07;
+      p.y += (p.targetY - p.y) * 0.07;
     } else {
       // хаотичное движение
       p.vx += (Math.random() - 0.5) * 0.1;
