--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ canvas {
 .finalText {
   font-size: 20vw; /* адаптивно для ширины экрана */
   font-weight: bold;
-  color: #ff2e63;
+  color: transparent;
+  border - style: 1px;
+  border-color: grey;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -72,7 +74,7 @@ canvas {
 <body>
 
 <div class="message" id="message"></div>
-<div class="finalText" id="finalText">онли ю</div>
+<div class="finalText" id="finalText">вместе 영원히</div>
 <canvas id="canvas"></canvas>
 
 <script>
