--- a/index.html
+++ b/index.html
@@ -57,14 +57,9 @@ canvas {
   font-size: 20vw; /* адаптивно для ширины экрана */
   font-weight: bold;
   color: transparent;
-  border - style: 1px;
-  border-color: grey;
+  border: 3px;
+  border-color: white;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  z-index: 2;
   pointer-events: none;
   transition: opacity 1.5s ease;
 }
