--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@ canvas {
 }
 
 .finalText {
-  font-size: 20vw; /* адаптивно для ширины экрана */
+  font-size: 10vw; /* адаптивно для ширины экрана */
   font-weight: bold;
-  color: transparent;
-  border: 3px;
-  border-color: white;
+  color: white;
   position: absolute;
   pointer-events: none;
   transition: opacity 1.5s ease;
