--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@ canvas {
   font-weight: bold;
   color: white;
   position: absolute;
+  top : 50%;
+  left: 50%;
+  transform: translate( -50%, -50%);
+  opacity: 0;
+  z-index: 2;
   pointer-events: none;
   transition: opacity 1.5s ease;
 }
